Bug 144952 - Writer crashes when I try to print
Summary: Writer crashes when I try to print
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All Windows (All)
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0
Keywords: bibisectNotNeeded, regression
: 144775 144955 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-10-05 17:12 UTC by Roman Kuznetsov
Modified: 2021-10-11 02:47 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2021-10-05 17:12:53 UTC
Description:
Writer crashes when I try to print

Steps to Reproduce:
1. Open Writer
2. type any phrase
3. Press Ctrl+P +> it opens a Print dialog
4. Press Print button => LO crashes

Actual Results:
LO crashes and doesn't print anything

Expected Results:
LO just works fine and print fine too


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: b1488cd6f008049a9aaff7350deeb73cbbd535b6
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded

it looks as regression, I didn't see it a month ago

I have here the HP1020 printer
Comment 1 Henrik Palomäki 2021-10-06 06:13:32 UTC
Tested using "Mircosoft Print to PDF" as a printer and got:

repro on (crash):

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: b60b6bfaafa1315e07108dba50f016975b619c59
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: fi-FI (fi_FI); UI: en-US
Calc: CL

no repro on (works):

Version: 7.2.1.2 (x64) / LibreOffice Community
Build ID: 87b77fad49947c1441b67c559c339af8f3517e22
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: fi-FI (fi_FI); UI: en-US
Calc: CL
Comment 2 Telesto 2021-10-06 11:45:01 UTC
*** Bug 144955 has been marked as a duplicate of this bug. ***
Comment 3 Telesto 2021-10-06 11:45:58 UTC
Crash invalid_pointer_read_c0000005_mergedlo.dll!printer::implreleasefonts
Comment 4 Roman Kuznetsov 2021-10-07 06:49:42 UTC
https://gerrit.libreoffice.org/c/core/+/123199
Comment 5 Commit Notification 2021-10-07 11:27:45 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/354706e3f5c05294af6e0000d5b9f814cfe01741

tdf#144952 VCL fix the Printer graphics release

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Roman Kuznetsov 2021-10-08 08:50:50 UTC
Verified in

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 93115d2c54d645bcf2f80fde325e3ede39dee4d5
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded

Thanks for fixing, Jan-Marek!
Comment 7 Mark Hung 2021-10-11 02:47:53 UTC
*** Bug 144775 has been marked as a duplicate of this bug. ***