tdf#144952 VCL fix the Printer graphics release

Regression from commit 1b7c53db87bb67eeb2591fbb186f7ac20eb00c68
("WIN lazy init WinSalInfoPrinter graphics"), which removed the
// HACK to fix an urgent P1 printing issue fast

SalPrinter::StartPage returns a SalGraphics to the VCL Printer
object. On Windows SalPrinter::EndPage deletes the SalPrinter's
SalGraphics. MacOS keeps a single SalGraphics for the whole
SalPrinter lifetime. PspSalPrinter stores it in a unique_ptr
and always resets it in StartPage.

But in any case the VCL Printer's SalGraphics reference must be
freed before calling a function, which might delete it.

Change-Id: Ice528b2bbc89eaadff576420bf210ea4ec1e58d5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/123199
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
(cherry picked from commit 354706e3f5c05294af6e0000d5b9f814cfe01741)