vcl/source/gdi/print.cxx
@@ -1599,8 +1599,8 @@ void Printer::ImplEndPage()
 
     if ( mpPrinter )
     {
-        mpPrinter->EndPage();
         ReleaseGraphics();
+        mpPrinter->EndPage();
         mbDevOutput = false;
 
         mpJobGraphics = nullptr;
